chore: remove estimations (completion, percentage)
